--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p>In the last 2 weeks, you have spent <a id="hours"></a> hours playing games. 
-		<a id='comment'></a>
-	</p>
+	<div id='alert'></div>
+	<div id='notAlert'>
+		<p>In the last 2 weeks, you have spent <a id="hours"></a> hours playing games. 
+			<a id='comment'></a>
+		</p>
+		
+		<p>Your steamID is currently <a id="id"></a>.</p>	
+	</div>
 	
-	<p>Your steamID is currently <a id="id"></a>.</p>
 </body>
 <footer>
 	<a href="http://steampowered.com">Powered by Steam</a>
