--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<script src="popup.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id='alert'></div>
 	<div id='notAlert'>
-		<p>In the last 2 weeks, you have spent <a id="hours"></a> hours playing games. 
-			<a id='comment'></a>
-		</p>
-		
-		<p>Your steamID is currently <a id="id"></a>.</p>	
+		<div class="row">
+			<article>Period:</article>
+			<article><span class="result">2 weeks</span></article>
+		</div>
+		<div class="row">
+			<article>Game Time:</article>
+			<article><span class="result" id="hours"></span></article>
+		</div>
+		<div class="row">
+			<article><span>Prognosis:</span></article>
+			<article><span class="result" id="comment"></span></article>
+		</div>
+		<div class="row">
+			<article>SteamID:</article>
+			<article><span class="result" id="id"></span></article>
+		</div>
 	</div>
-	
 </body>
+<!--
 <footer>
 	<a href="http://steampowered.com">Powered by Steam</a>
 	<p> SteamHour is not affiliated with Valve. All trademarks and registered trademarks are the property of their respective owners. </p>
-</footer>
+</footer>-->
 </html>
